# pyworks-storage

./: README.md  conftest.py  pyproject.toml
pyworks_storage/: aws.py  config.py  interfaces.py  main.py  storage.py
tests/: test_interface.py  test_storage.py  utils.py
