[tool.poetry]
name = "pyworks-storage"
version = "0.1.0-alpha.1"
description = "Provide a variety of storage backends in a single library."
authors = [
    "PyWorks Asia Team <opensource@pyworks.asia>"
]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/pyworksasia/pyworks-storage"
homepage = "https://github.com/pyworksasia/pyworks-storage"

keywords = ['packaging', 'poetry']

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
